[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Fonts/8-bit Arcade In.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TestLevel.gd" type="Script" id=2]
[ext_resource path="res://Resources/BG/1level.jpg" type="Texture" id=3]
[ext_resource path="res://Resources/UI/FPS.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 134
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 200
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 98
font_data = ExtResource( 1 )

[node name="Level" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgpreview" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1292.0
margin_bottom = 732.0
rect_min_size = Vector2( 1280, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 255.0
margin_bottom = 732.0
rect_min_size = Vector2( 255, 720 )

[node name="Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_right = 255.0
margin_bottom = 100.0
rect_min_size = Vector2( 255, 100 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = -5
custom_constants/shadow_offset_y = 15
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " Test"
tab_size = 0
text = " Test"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 259.0
margin_right = 1033.0
margin_bottom = 732.0
rect_min_size = Vector2( 770, 720 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 774.0
margin_bottom = 100.0
rect_min_size = Vector2( 770, 100 )

[node name="Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
margin_right = 774.0
margin_bottom = 100.0
rect_min_size = Vector2( 765, 100 )
mouse_filter = 2
custom_constants/shadow_offset_x = -5
custom_constants/shadow_offset_y = 15
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "     Levels"
tab_size = 0
text = "     Levels"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 104.0
margin_right = 774.0
margin_bottom = 628.0
rect_min_size = Vector2( 720, 520 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 774.0
margin_bottom = 260.0
rect_min_size = Vector2( 770, 260 )

[node name="Level1" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 385.0
margin_bottom = 260.0
rect_min_size = Vector2( 385, 260 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "1"
flat = true

[node name="Level2" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 389.0
margin_right = 774.0
margin_bottom = 260.0
rect_min_size = Vector2( 385, 260 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "2"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 264.0
margin_right = 774.0
margin_bottom = 524.0
rect_min_size = Vector2( 770, 260 )

[node name="Level3" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 385.0
margin_bottom = 260.0
rect_min_size = Vector2( 385, 260 )
focus_mode = 0
custom_colors/font_color = Color( 0.992157, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "3"
flat = true

[node name="Level4" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 389.0
margin_right = 774.0
margin_bottom = 260.0
rect_min_size = Vector2( 385, 260 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "4"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 632.0
margin_right = 774.0
margin_bottom = 732.0
rect_min_size = Vector2( 770, 100 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1037.0
margin_right = 1292.0
margin_bottom = 732.0
rect_min_size = Vector2( 255, 720 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer3"]
margin_right = 255.0
margin_bottom = 420.0
rect_min_size = Vector2( 255, 420 )
mouse_filter = 1

[node name="TempButton" type="Button" parent="HBoxContainer/VBoxContainer3"]
visible = false
margin_top = 424.0
margin_right = 255.0
margin_bottom = 524.0
rect_min_size = Vector2( 255, 100 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer3/TempButton"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 255, 100 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Back"
text = "Back"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_top = 424.0
margin_right = 255.0
margin_bottom = 524.0
rect_min_size = Vector2( 255, 100 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer3/Back"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 255, 100 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Back"
text = "Back"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" parent="." instance=ExtResource( 4 )]

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Level1" to="." method="_on_Level1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Level1" to="." method="_on_Level1_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Level2" to="." method="_on_Level2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Level2" to="." method="_on_Level2_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/Level3" to="." method="_on_Level3_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/Level3" to="." method="_on_Level3_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/Level4" to="." method="_on_Level4_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/Level4" to="." method="_on_Level4_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer3/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/Back" to="." method="_on_Back_pressed"]
